2016-08-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (sortfor2): New test.
	* sortfor2.awk, sortfor2.in, sortfor2.ok: New files.
	Thanks Christian Schneider <software@chschneider.eu>
	for the report.

2015-06-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (ofmtstrnum): New test.
	* ofmtstrnum.awk, ofmtstrnum.ok: New files.

2016-07-01         Arnold D. Robbins     <arnold@skeeve.com>

	* arrayind1.awk, arrayind1.ok: Comment out prints to stderr to
	avoid buffer flushing on obscure systems.
	* dumpvars.ok, symtab6.ok, symtab8.ok: Update after code changes.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (subback): New test.
	* subback.awk, subback.in, subback.ok: New files.
	Thanks to Mike Brennan for the test.

	Unrelated:

	* Makefile.am (FAIL_CODE1): Update the list.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (GAWK_EXT_TESTS): Add mixed1. Who knows
	how long that's been broken...
	* mixed1.ok: Adjust to match what the code produces.
	Thanks to John E. Malmberg <wb8tyw@qsl.net> for the report.

2016-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab10.awk, symtab10.in, symtab10.ok: New files.
	* Makefile.am (symtab10): New test.
	Thanks to Hermann Peifer for the report.

2016-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (hex2): New test.
	* hex2.awk, hex2.in, hex2.ok: New files.

2016-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fsnul1): New test.
	* fsnul1.awk, fsnul1.in, fsnul1.ok: New files.

2016-05-25         Arnold D. Robbins     <arnold@skeeve.com>

	* arrayind1.awk: Flush writes to stderr. We hope this helps
	with the MinGW version.

2016-05-12         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (arrayind1): New test.
	* arrayind1.awk, arrayind1.in, arrayind1.ok: New files.
	* Makefile.am (sigpipe1): New test.
	* sigpipe1.awk, sigpipe1.ok: New files.
