@@ -443,6 +443,8 @@ EXTRA_DIST = \
 	igncfs.ok \
 	ignrcas2.awk \
 	ignrcas2.ok \
+	ignrcas3.awk \
+	ignrcas3.ok \
 	ignrcase.awk \
 	ignrcase.in \
 	ignrcase.ok \
@@ -1115,7 +1117,7 @@ GAWK_EXT_TESTS = \
 	fieldwdth fpat1 fpat2 fpat3 fpat4 fpat5 fpatnull fsfwfs funlen \
 	functab1 functab2 functab3 fwtest fwtest2 fwtest3 \
 	genpot gensub gensub2 getlndir gnuops2 gnuops3 gnureops \
-	icasefs icasers id igncdym igncfs ignrcas2 ignrcase \
+	icasefs icasers id igncdym igncfs ignrcas2 ignrcas3 ignrcase \
 	incdupe incdupe2 incdupe3 incdupe4 incdupe5 incdupe6 incdupe7 \
 	include include2 indirectbuiltin indirectcall indirectcall2 \
 	lint lintold lintwarn \
@@ -2177,6 +2179,12 @@ rscompat:
 symtab10:
 	@echo $@
 	@AWKPATH="$(srcdir)" $(AWK) -D -f $@.awk < "$(srcdir)/$@.in" >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
+
+ignrcas3::
+	@echo $@
+	@GAWKLOCALE=el_GR.iso88597 \
+	AWKPATH="$(srcdir)" $(AWK) -f $@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
 
 # Targets generated for other tests:
