@@ -1,0 +1,18 @@
+data[1] ~ dfa[1] = ok
+data[1] ~ regex[1] = ok
+data[1] ~ dfa[2] = ok
+data[1] ~ regex[2] = ok
+data[1] ~ dfa[3] = ok
+data[1] ~ regex[3] = ok
+data[2] ~ dfa[1] = ok
+data[2] ~ regex[1] = ok
+data[2] ~ dfa[2] = ok
+data[2] ~ regex[2] = ok
+data[2] ~ dfa[3] = ok
+data[2] ~ regex[3] = ok
+data[3] ~ dfa[1] = ok
+data[3] ~ regex[1] = ok
+data[3] ~ dfa[2] = ok
+data[3] ~ regex[2] = ok
+data[3] ~ dfa[3] = ok
+data[3] ~ regex[3] = ok
