@@ -5,6 +5,12 @@
 	Thanks Christian Schneider <software@chschneider.eu>
 	for the report.
 
+	Unrelated:
+
+	* Makefile.am (ignrcas3): New test.
+	* ignrcas3.awk, ignrcas3.ok: New files.
+	Based on test code from Norihiro Tanaka <noritnk@kcn.ne.jp>.
+
 2015-06-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (ofmtstrnum): New test.
